# ComicTrans

./: .gitignore  .gitmodules  README.md
backend/: pyproject.toml  requirements-detector.txt  requirements-ocr.txt  requirements-translate.txt  requirements.txt
backend/examples/: full-page-render.json
backend/scripts/: draw_text.py  ocr_image.py  preview_page.py
backend/src/manga_workspace/: __init__.py  api.py  detection.py  errors.py  imaging.py  layout.py  models.py  ocr.py  pipeline.py  rendering.py  translation.py
backend/tests/: test_layout.py  test_model_warmth.py  test_translation.py
desktop/: index.html  package.json
desktop/electron/: main.cjs
desktop/src/: App.jsx  styles.css
extension/: background.js  content.css  content.js  manifest.json  sidepanel.css  sidepanel.html  sidepanel.js
